# mingx

./: .env.example  .gitignore  AGENTS.framework-suggested.md  AGENTS.md  README.md  data_prep.py  phase0.yaml  phase1.yaml  pyproject.toml
.codex/: config.toml
api/: README.md  __init__.py  __main__.py  backends.py  evas.py  model_probe.py  openai_compatible.py  settings.py
configs/: README.md
cps/: __init__.py
docs/: README.md  architecture.md  current-work-summary.md  execution-readiness-checklist.md  experiment-design-overview.md  paper-alignment-v10.md  paper-alignment-v12.md  paper-draft-v5.5-taskB-final-gemini-minimal-q7revised-polish2.md  phase-plan.md  phase-tree-crosswalk.md  phase0-specification.md  phase1-implementation-completion-report.md  phase1-live-mini-batch-report.md  phase1-protocol.md  phase1-usable-models.md  phase2-design.md  project-reading-prompt.md  recent-change-handoff-prompt.md  reference-projects-local.md  review-protocol.md
mingx_paper_revision_codex_goals/: CODEX_COMMANDS.md  GLOBAL_CONSTRAINTS.md  PACKAGE_MANIFEST.json  README.md  goal-index.yaml
mingx_sub_stage_codex_goals/: CODEX_COMMANDS.md  GLOBAL_CONSTRAINTS.md  PACKAGE_MANIFEST.json  README.md  goal-index.yaml
phase0/: __init__.py  manifest.py  measurement_store.py  smoke.py
phase1/: __init__.py  bridge.py  calibration.py  config.py  dashscope_backend.py  delta_pipeline.py  exports.py  openai_compatible_backend.py  orderings.py  progress.py  retrieval.py  run.py  scoring.py  secrets.py  smoke.py
schemas/: post_lapi_extraction_quality.schema.json  (+3 more)
tests/: conftest.py  (+95 more)
(+1797 files in other folders)
